[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumbenchmarks"
version = "0.1.0"
description = "Quantum circuit evaluation and benchmarking framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["benchmark"]
